<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.erudika</groupId>
	<artifactId>velocity-netbeans</artifactId>
	<version>3.0.1-SNAPSHOT</version>

	<packaging>nbm</packaging>
	<name>Velocity Plugin for Netbeans</name>
	<description>NetBeans plugin that plugin that provides editor support for Apache Velocity Template Language (VTL) in .vm and .vsl files.</description>
	<url>https://github.com/albogdano/velocity-netbeans</url>

	<organization>
		<name>Erudika</name>
		<url>https://erudika.com</url>
	</organization>

	<licenses>
		<license>
			<name>Common Development and Distribution License 1.0</name>
			<url>https://opensource.org/license/CDDL-1.0</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<!--Original author-->
			<id>wejaeger</id>
			<name>Werner Jäger</name>
			<email>werner.jaeger@t-systems.com</email>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>albogdano</id>
			<name>Alex Bogdanovski</name>
			<email>alex@erudika.com</email>
			<url>https://github.com/albogdano</url>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/albogdano/velocity-netbeans.git</connection>
		<developerConnection>scm:git:https://github.com/albogdano/velocity-netbeans.git</developerConnection>
		<url>https://github.com/albogdano/velocity-netbeans</url>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/albogdano/velocity-netbeans/issues</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<netbeans.api.version>RELEASE280</netbeans.api.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-completion</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-codetemplates</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-api-annotations-common</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-java-source</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-java-source-base</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-libs-javacapi</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-options-api</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-projectapi</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-api-java</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-bracesmatching</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-errorstripe-api</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-fold</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-lib</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-lib2</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-java-editor-lib</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-lexer</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-html-lexer</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-parsing-api</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-spi-editor-hints</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-awt</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-filesystems</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-loaders</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-modules</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-nodes</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-text</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-util-ui</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-util</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-util-lookup</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-windows</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.0.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javacc-maven-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<sourceDirectory>${project.basedir}/src/main/java/com/erudika/netbeans/velocity/jcclexer</sourceDirectory>
					<includes>
						<include>VelocityParser.jjt</include>
					</includes>
					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
					<interimDirectory>${project.build.directory}/generated-sources/jjtree</interimDirectory>
					<staleMillis>0</staleMillis>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.netbeans.utilities</groupId>
				<artifactId>nbm-maven-plugin</artifactId>
				<version>14.4</version>
				<extensions>true</extensions>
				<configuration>
					<moduleType>normal</moduleType>
					<useOSGiDependencies>false</useOSGiDependencies>
					<manifest>
						<Automatic-Module-Name>com.erudika.netbeans.velocity</Automatic-Module-Name>
					</manifest>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.netbeans.api</groupId>
							<artifactId>org-openide-util-lookup</artifactId>
							<version>${netbeans.api.version}</version>
						</path>
						<path>
							<groupId>org.netbeans.api</groupId>
							<artifactId>org-netbeans-modules-options-api</artifactId>
							<version>${netbeans.api.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.5</version>
				<configuration>
					<argLine>--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<mavenExecutorId>forked-path</mavenExecutorId>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<preparationGoals>clean</preparationGoals>
					<releaseProfiles>release</releaseProfiles>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.10.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
					<autoPublish>true</autoPublish>
					<waitUntil>published</waitUntil>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.4</version>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<show>public</show>
									<quiet>true</quiet>
									<docfilessubdirs>true</docfilessubdirs>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
